# xf-tweaks

./: .gitignore  Cargo.toml  README.md  commands.json  commands.txt  install.sh  result.struct
src/: apps.rs  cli_app.rs  gui_app.rs  json.rs  main.rs  style.css  utils.rs
