[package]
name = "xf-tweaks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk4 = { version = "0.6.6", features = ["Box"] }
gtk = {version = "0.6.6", package = "gtk4"}
lazy_static = "1.4.0"
serde_json = "1.0.96"

